--- a/package.json
+++ b/package.json
@@ -2,9 +2,28 @@
   "name": "@launchhq/react-native-keyboard-composer",
   "version": "0.1.0",
   "packageManager": "pnpm@10.26.0",
-  "description": " A native keyboard-aware composer component for React Native with smooth keyboard animations",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "description": "A native keyboard-aware composer component for React Native with smooth keyboard animations",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./build/index.d.ts",
+      "default": "./build/index.js"
+    }
+  },
+  "files": [
+    "build",
+    "android/build.gradle",
+    "android/src",
+    "ios/*.podspec",
+    "ios/*.swift",
+    "expo-module.config.json",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
@@ -27,7 +46,10 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/launchtodayhq/react-native-keyboard-composer",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/launchtodayhq/react-native-keyboard-composer.git"
+  },
   "bugs": {
     "url": "https://github.com/launchtodayhq/react-native-keyboard-composer/issues"
   },
