--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "@launchhq/react-native-keyboard-composer": ["../src/index"],
-      "@launchhq/react-native-keyboard-composer/*": ["../src/*"]
-    }
+    "strict": true
   }
 }
