--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "15.0.3",
-    "@launchhq/react-native-keyboard-composer": "file:..",
+    "@launchhq/react-native-keyboard-composer": "^0.1.3",
     "@legendapp/list": "^2.0.18",
     "expo": "~54.0.29",
     "expo-linking": "~8.0.10",
